[gd_scene load_steps=3 format=3 uid="uid://bbjowoa4gcx16"]

[ext_resource type="Script" uid="uid://cwr3d4lnc0r23" path="res://scripts/settings/settings.gd" id="1_2lbdr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lbdr"]
bg_color = Color(0, 0, 0, 0.741176)

[node name="SettingsPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2lbdr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2lbdr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(284, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Input"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pedal Mode"

[node name="PedalModeOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Pedal mode.

Dual Axis: Most common pedal mode
for racing wheel/pedal combos.

Single Axis: Fit for triggers in
gamepads."
selected = 0
item_count = 2
popup/item_0/text = "Dual Axis"
popup/item_0/id = 0
popup/item_1/text = "Single Axis"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Visuals"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="SmoothTexturesCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Whether to render the textures
with smoothing on. Leave off
if you wish to retain the pixel-art
aesthetic."
text = "Smooth Textures"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Visuals - Animations"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="PedalVibrationCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Whether to animate a vibration
when the Throttle pedal is down"
text = "Pedal Vibration"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="PedalSinkCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Whether to veritcally sink and
rotate pedal base when pedals
are depressed."
text = "Pedal Sink"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer/PedalModeOptionButton" to="." method="_on_pedal_mode_option_button_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer4/SmoothTexturesCheckbox" to="." method="_on_smooth_textures_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer2/PedalVibrationCheckbox" to="." method="_on_pedal_vibration_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer2/VBoxContainer/HBoxContainer3/PedalSinkCheckbox" to="." method="_on_pedal_sink_checkbox_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
